cleanup EBUpes, remove DefaultMutableTreeNode